--- a/AZSChool/AZSchool.WEB/AZSchool.WEB.csproj
+++ b/AZSChool/AZSchool.WEB/AZSchool.WEB.csproj
@@ -6,4 +6,10 @@
 
 
 
+  <ItemGroup>
+    <Content Remove="wwwroot\css\MainPage.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
 </Project>
