--- a/AZSChool/AZSchool.WEB/AZSchool.WEB.csproj
+++ b/AZSChool/AZSchool.WEB/AZSchool.WEB.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
 </Project>
